--- a/package.json
+++ b/package.json
@@ -16,27 +16,33 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.5",
     "@sanity/client": "^6.27.1",
     "@sanity/codegen": "^3.71.2",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.71.2",
     "@tailwindcss/typography": "^0.5.16",
+    "@uiw/react-md-editor": "^4.0.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.474.0",
-    "next": "15.1.6",
+    "markdown-it": "^14.1.0",
+    "next": "^15.2.0-canary.26",
     "next-auth": "^5.0.0-beta.25",
     "next-sanity": "^9.8.42",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sanity": "^3.71.2",
     "sanity-plugin-markdown": "^5.0.0",
+    "server-only": "^0.0.1",
+    "slugify": "^1.6.6",
     "styled-components": "^6.1.14",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
